# Dream

./: CMakeLists.txt  HelloWorld.dm  data.dm  grammar.md  hw.s  logic.dm  readme.md  structure.dm  test.dm  todo.dm  variation.dm
experiments/1-jit/: fromat.cpp  jit.cpp  readme.md  test.s
experiments/1.5-anal/: anal.cpp  readme.md
experiments/2-elfgen/: asmyas.hpp  elfgen-smaller-improved.cpp  elfgen-smaller.cpp  elfgen-smallest-improved.cpp  elfgen.cpp  min.cpp  min.s  readme.md
ideas/: logic.dm  structure.dm  test.dm  todo.dm
include/lexer/: lexer.hpp
include/parser/: lexer.hpp
src/interpreter/: main.cpp
